--- a/generators/app/templates/skeleton/views/layouts/application.html
+++ b/generators/app/templates/skeleton/views/layouts/application.html
@@ -1,25 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Neonode</title>
-    <link rel="icon" type="image/gif" href="/img/favicon.gif" />
-
-    <!-- webpack -d -->
-    <script src="/dist/bundle.js"></script>
+    <link rel="icon" type="image/gif" href="/images/favicon.gif" />
+    <link rel="stylesheet" href="/build/stylesheets/_entries/style.css">
 </head>
-
 <body>
     <header>
-        <h1><img src="/img/neon-logo.png" width="80" /><span>It works!</span></h1>
+        <h1><img src="/img/neon-logo.png" alt="Neon logo" width="80" /><span>It works!</span></h1>
     </header>
     <div class="yield">
         <%= yield %>
     </div>
     <footer>
-        <p><a href="http://github.com/sgarza/generator-neonode" target="_blank"><span>Neonode</span></a></p>
+        <p>
+            <a href="https://github.com/Empathia/neonode" target="_blank">Neonode</a>
+        </p>
     </footer>
+    <script src="/build/javascripts/_entries/application.js"></script>
 </body>
-
 </html>
