--- a/generators/app/templates/skeleton/src/stylesheets/_entries/style.css
+++ b/generators/app/templates/skeleton/src/stylesheets/_entries/style.css
@@ -1,31 +1,32 @@
+:root {
+  --main-bg-color: #fafafa;
+  --main-color: #323232;
+  --link-color: #7ec5ed;
+  --font-stack: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  font-family: var(--font-stack);
+  font-size: 14px;
+  line-height: 1.618;
+}
+
+* {margin: 0}
+
 body {
-  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
-  color : #333;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
 }
 
-h1 {
-  border-bottom: 1px solid  #CCC;
-  text-align : center;
+a {
+  color: color(var(--link-color) shade(10%));
 }
 
-h1 span {
-  margin : 0 0 0 20px;
-}
-
-.yield {
-  margin : 20px;
-  padding : 20px;
-  font-size : 13px;
-  background : #EEE;
-  border-radius : 6px;
-}
-
-footer {
-  border-top: 1px solid #CCC;
-  text-align: center;
-  font-size : 12px;
-}
-
-footer a {
-  color : #333;
+.test-code-block {
+  padding: 1rem 1.5rem;
+  margin-bottom: 1rem;
+  background-color: color(var(--main-bg-color) shade(5%));
+  border-radius: 3px;
 }
