--- a/generators/app/templates/skeleton/views/layouts/application.html
+++ b/generators/app/templates/skeleton/views/layouts/application.html
@@ -7,19 +7,22 @@
   <link rel="stylesheet" href="/build/stylesheets/_entries/style.css">
 </head>
 <body>
-  <header>
-    <h1>
-      <img src="/img/neon-logo.png" alt="Neon logo" width="80" /> It works!
-    </h1>
-  </header>
-  <div class="yield">
-    <%= yield %>
+  <div style="padding: 2rem;">
+    <header style="margin: 0 0 1rem; text-align: center;">
+      <div>
+        <img src="/images/neonode-logo.svg" alt="Neonode logo" width="300" style="max-width: 100%;" />
+      </div>
+      <p>It Works!</p>
+    </header>
+    <div class="yield">
+      <%= yield %>
+    </div>
+    <footer style="text-align: center;">
+      <p>
+        <a href="https://github.com/Empathia/neonode" target="_blank">https://empathia.github.io/neonode/</a>
+      </p>
+    </footer>
   </div>
-  <footer>
-    <p>
-      <a href="https://github.com/Empathia/neonode" target="_blank">Neonode</a>
-    </p>
-  </footer>
   <script src="/build/javascripts/_entries/application.js"></script>
 </body>
 </html>
