--- a/generators/app/templates/skeleton/views/layouts/application.html
+++ b/generators/app/templates/skeleton/views/layouts/application.html
@@ -19,7 +19,7 @@
     </div>
     <footer style="text-align: center;">
       <p>
-        <a href="https://github.com/Empathia/neonode" target="_blank">https://empathia.github.io/neonode/</a>
+        <a href="https://empathia.github.io/neonode/" target="_blank">https://empathia.github.io/neonode/</a>
       </p>
     </footer>
   </div>
